# OfficeLit

./: .gitignore  README.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  RichEditor.jsx  editor.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  main.rs.01
